@@ -1,3 +1,9 @@
+2011-06-10  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* swank.lisp (macro-indentation): Walk the lambda-list
+	to construct a better indentation spec instead of just
+	looking for &BODY.
+
 2011-06-09  Nikodemus Siivola  <nikodemus@random-state.net>
 
 	* swank-sbcl.lisp (execv): Stupid SBCL hackers breaking backwards
